<resources>
    <string name="app_name">SnackQuest</string>
    <string name="login_error">Usuário ou senha incorretos</string>
    <string name="empty_fields_error">Os campos não podem ser vazios</string>
    <string name="logoff_message">Saindo da sua conta...</string>
    <string name="new_account_label">Cria nova conta</string>
    <string name="password_mismatch">As senhas não correspondem</string>
    <string name="save_user_success">Usuário criado com sucesso</string>
    <string name="weak_password">A senha deve ter no mínimo 8 caracteres</string>
    <string name="user_cosilion">O email informado já está sendo usado</string>
    <string name="invalid_credentials">Campos inválidos</string>
    <string name="create_user_error">Erro ao criar novo usuário</string>
    <string name="loading_recipe_list_error">Erro ao carregar lista de receitas</string>
    <string name="on_recipe_click">Você clicou em</string>
    <string name="logout">sair</string>
    <string name="login">entrar</string>
    <string name="not_have_acc">Não tem cadastro?</string>
    <string name="click_here">Clique aqui</string>
    <string name="email">email</string>
    <string name="password">senha</string>
    <string name="new_user_label">Cadastrar novo usuário</string>
    <string name="name">nome</string>
    <string name="confirm_password">confirmar senha</string>
    <string name="confirm_password_button">Registrar Usuário</string>
    <string name="database_error">Erro ao acessar o banco de dados</string>


</resources>
